Fixed background not covering the whole page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4551,6 +4551,7 @@
 		padding: 6em 0;
 		position: relative;
 		z-index: 1;
+		min-height: 100vh;
 	}
 
 	.topright {
